--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.539.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
     "pg": "^8.16.0",
