--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@prisma/client": "^6.8.2",
     "@prisma/extension-accelerate": "^2.0.1",
     "@tailwindcss/typography": "^0.5.16",
+    "@uiw/react-color-sketch": "^2.7.3",
+    "@uiw/react-color-wheel": "^2.7.3",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
