--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.539.0",
-    "next": "15.3.3",
+    "next": "^16.0.1",
     "next-auth": "^4.24.11",
     "pg": "^8.16.0",
     "prisma": "^6.8.2",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.56.4",
     "react-hot-toast": "^2.5.2",
     "react-markdown": "^10.1.0",
